fix(z-index): add z-index to dropdown items

--- a/src/postcss/dropdown.css
+++ b/src/postcss/dropdown.css
@@ -36,6 +36,7 @@ $dropdown-arrow-wrap-icon-fill--active: $active-color;
 $dropdown-items-background: #fff;
 $dropdown-items-border-radius: $border-radius-base;
 $dropdown-items-box-shadow: $box-shadow-base;
+$dropdown-items-z-index: 100;
 
 /* Dropdown item */
 
@@ -131,6 +132,7 @@ $dropdown-item-bg-color--active: $color-grey-2;
     width: 100%;
     top: 35px;
     left: 0px;
+    z-index: $dropdown-items-z-index;
     padding: 5px 0;
     background: $dropdown-items-background;
     border-radius: $dropdown-items-border-radius;
@@ -138,7 +140,8 @@ $dropdown-item-bg-color--active: $color-grey-2;
     pointer-events: none;
     box-shadow: $box-shadow-base;
 
-    & .dropdown-item {
+    & .dropdown-item,
+    & .prefixed-item {
       font-size: 12px;
       height: 30px;
       cursor: pointer;
